Amended media queries to ensure navbar elements are always visible

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -256,39 +256,11 @@ footer i {
 @media screen and (min-width: 804px) {
 
     /* Header */
-    nav {
-        display: block;
-        position: relative;
-        box-shadow: none;
-        width: fit-content;
-        padding-right: 1rem;
-    }
-
-    #navbar {
-        display: flex;
-    }
-
-    #navbar>li {
-        padding: 1rem;
-    }
-
-    .nav-toggle-label {
-        display: none;
-    }
-
+    
     #title {
         font-size: 260%;
         line-height: 50px;
         margin: 0 0.5rem;
-    }
-
-    nav ul li {
-        border-left: 1px solid #435426;
-        text-align: center;
-    }
-
-    nav ul li:first-child {
-        border-left: none;
     }
 
     main {
@@ -301,8 +273,8 @@ footer i {
     }
 }
 
-/* Media query: tablets and larger (848px and up) */
-@media screen and (min-width: 848px) {
+/* Media query: tablets and larger (986px and up) */
+@media screen and (min-width: 986px) {
 
     /* Header */
     nav {
